@@ -1,5 +1,6 @@
 const { SlashCommandBuilder } = require('@discordjs/builders');
 const CONFIG = require('../config.json');
+const port = process.env.PORT || 3000;
 const adress = process.env.adress || `https://localhost:${port}`;
 
 module.exports = {
