@@ -1,4 +1,7 @@
 ---
+Refactor modules/newsletter.js SendPost()
+Added modules/set_activity.js to set current activity of bot. Using for setting 'test' while testing from local pc etc.
+---
 Fiexd type video inssue in modules/newsletter.js
 Fixed messages fetch limit (increased from 1 to 10) in modules/newsletter.js
 Kinda adaptive express host url in server.js and some commands
